spacing of section fixed

--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ body {
 }
 
 img {
-	margin-right: 8px;
-	max-width:13%;
+	margin-right: 12px;
+	margin-bottom: 12px;
+	max-width: 50px;
 }
 
 a {
-	text-align: center;
 	color: purple;
 }
 
@@ -22,7 +22,7 @@ a:hover {
 	color: orange;
 }
 
-h1, .tagline {
+h1, .tagline, .link {
   	text-align: center;
 }
 
@@ -31,8 +31,10 @@ h2 {
 	border-bottom-style: solid;
 	border-bottom-color: #D19A61;
 	padding-bottom: 15px;
-	margin-left: 10px;
-	padding-top: 20px;
+	margin-left: 30px;
+	padding-top: 35px;
+	width: 440px;
+	font-size: 160%;
 }
 
 span {
@@ -42,18 +44,20 @@ span {
 
 header {
 	margin-top: 15px;
-	padding-top: 15px;
+	padding-top: 35px;
+	padding-bottom: 35px;
 	background-color: #FFFFFF;
+	width: 500px;
 }
 
 .imgs {
-	max-width: 371px;
+	max-width: 400px;
+	padding-left: 30px;
+	padding-bottom: 23px;
 }
 
 section {
-	padding-left: 10px;
-	padding-right: 20px;
-	padding-bottom: 15px;
 	margin-top: 20px;
 	background-color: #FFFFFF;
+	width: 500px;
 }
